// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button displays button 1`] = `
<div>
  <div
    class="root fooClass"
    variant="contained"
  >
    Foo
  </div>
</div>
`;

exports[`Button displays disabled button 1`] = `
<div>
  <div
    class="root fooClass"
    disabled=""
    variant="contained"
  >
    Foo
  </div>
</div>
`;
